2005-06-10  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles/gmake/mwccnlm.mak: fix compiler version collection.

	* build/Makefiles/gmake/netware/extern.mak: fix useful paths.

	* src/c_locale.c: put here wrappers for some wfuncs, due to bogus
	system libs in Netware.

	* stlport/cwchar: use STLport's wchar.h to take wchar_t/wint_t for
	Netware.

	* stlport/wchar.h: use correct C declaration of some wfuncs, thanks
	again to ugly Netware libs.

	* stlport/ciso646, stlport/iso646.h, stlport/wctype.h: headers absent
	for Novell Netware.

	* stlport/cwctype: Metrowerks define __MSL__, but we don't use MSL libs
	if we have STLport for Netware.

	* stlport/cstdlib: div function from Novell Netware clib and libc lead to
	system crash.

2005-06-08  Francois Dumont  <dums@stlport...>

	* build/test/unit: Removed references to the now useless CPPUNIT_MINI
	macro.
  
	* test/unit/type_traits_test.cpp: Add new test case for trivial destructor
	detection.
  
	* stlport/stl/_fstream.h: Add missing basic_fstream construction from a
	Win32 file handle, was already done for basic_ifstream and basic_ofstream,
	thanks Alex Cosealin report.

2005-06-07  Francois Dumont  <dums@stlport...>

	* build/test/unit/Makefile.inc: Fix syntax error at last line.

2005-06-06  Petr Ovtchenkov  <ptr@island...>

	* build/lib/configure: add config options for Metrowerks compiler for
	Novell NetWare platform [references to root of MW headers/libs and to Novell's
	SDK headers/libs].

	* build/Makefiles/gmake/mwccnlm.mak: fixes for Metrowerk/NetWare.

	* build/Makefiles/gmake/app/mwccnlm.mak: idem.

	* build/Makefiles/gmake/netware/extern.mak: idem.

	* build/lib/mwccnlm.mak: idem.

	* build/test/unit/mwccnlm.mak: idem.

2005-06-03  Francois Dumont  <dums@stlport...>

	* test/unit/locale_test.cpp: Remove the very platform dependent LColl
	class that was listing supported locales. STLport already do so and
	report it using a rutime_error exception when not supported. When